@@ -9,6 +9,7 @@ OpenLDAP 2.3.35 Engineering
 	Fixed slapd-meta/slapo-rwm filter mapping
 	Fixed slapd-sql subtree shortcut (ITS#4856)
 	Fixed slapo-refint config message (ITS#4853)
+	Fixed libldap time_t signedness
 	Fixed libldap_r tpool reset (ITS#4855)
 
 OpenLDAP 2.3.34 Release (2007/02/16)
